--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,20 @@
             </releases>
         </repository>
     </repositories>
+    	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://v35731.1blu.de:8081/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://v35731.1blu.de:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+        <scm>
+                <connection>scm:git:git@github.com:dkt-projekt/e-SMT.git</connection>
+                <url>scm:git:git@github.com/dkt-projekt/e-SMT.git</url>
+                <developerConnection>scm:git:git@github.com:dkt-projekt/e-SMT.git</developerConnection>
+                <tag>HEAD</tag>
+        </scm>
 </project>
