--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,9 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+
+
+# Eclipse
+.settings/
+.project
+.classpath
