--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.dkt</groupId>
     <artifactId>e-smt</artifactId>
-    <version>0.4-SNAPSHOT</version>
+    <version>0.4</version>
 
     <parent>
         <artifactId>e-service-parent</artifactId>
@@ -15,7 +15,7 @@
     <dependency>
 			<groupId>de.dkt</groupId>
 			<artifactId>DKTCommon</artifactId>
-			<version>0.4-SNAPSHOT</version>
+			<version>0.4</version>
 			<!--  <exclusions>
 				<exclusion>
 					<groupId>ch.qos.logback</groupId>
@@ -26,7 +26,7 @@
     <dependency>
     	<groupId>de.dkt</groupId>
     	<artifactId>e-NLP</artifactId>
-    	<version>0.4-SNAPSHOT</version>
+    	<version>0.4</version>
     </dependency>
     </dependencies>
 
