--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.dkt</groupId>
     <artifactId>e-smt</artifactId>
-    <version>0.4</version>
+    <version>0.4-SNAPSHOT</version>
 
     <parent>
         <artifactId>e-service-parent</artifactId>
