Prepare pom.xml file for release 0.5

--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <version>0.5-SNAPSHOT</version>
 
     <parent>
-        <artifactId>e-service-parent</artifactId>
-        <groupId>eu.freme.e-services</groupId>
-        <version>0.9</version>
+	<groupId>eu.freme-project</groupId>
+	<artifactId>freme-parent</artifactId>
+	<version>0.17</version>
     </parent>
     
     <dependencies>
@@ -15,7 +15,7 @@
     <dependency>
 			<groupId>de.dkt</groupId>
 			<artifactId>DKTCommon</artifactId>
-			<version>0.5-SNAPSHOT</version>
+			<version>0.5</version>
 			<!--  <exclusions>
 				<exclusion>
 					<groupId>ch.qos.logback</groupId>
@@ -26,7 +26,7 @@
     <dependency>
     	<groupId>de.dkt</groupId>
     	<artifactId>e-NLP</artifactId>
-    	<version>0.5-SNAPSHOT</version>
+    	<version>0.5</version>
     </dependency>
     </dependencies>
 
@@ -41,45 +41,31 @@
 </build>
 
     <repositories>
-	<repository>
-		<id>freme-release</id>
-		<name>freme-nexus</name>
-		<url>http://rv1443.1blu.de/nexus/content/repositories/releases/</url>
-		<snapshots>
-			<enabled>false</enabled>
-		</snapshots>
-	</repository>
-	<repository>
-		<id>freme-nexus</id>
-		<name>freme-nexus</name>
-		<url>http://rv1443.1blu.de/nexus/content/repositories/snapshots/</url>
-		<releases>
-			<enabled>false</enabled>
-		</releases>
-	</repository>
-	<repository>
-		<id>releases</id>
-		<url>http://v35731.1blu.de:8081/nexus/content/repositories/releases</url>
-		<snapshots>
-			<enabled>false</enabled>
-		</snapshots>
-	</repository>
-	<repository>
-		<id>snapshots</id>
-		<url>http://v35731.1blu.de:8081/nexus/content/repositories/snapshots</url>
-		<snapshots>
-			<enabled>true</enabled>
-		</snapshots>
-	</repository>
+		  <repository>
+		    <id>maven-new-server-releases</id>
+		    <url>https://dev.digitale-kuratierung.de/nexus/repository/maven-releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		  </repository>
+		  <repository>
+		    <id>maven-new-server</id>
+    		<url>https://dev.digitale-kuratierung.de/nexus/repository/maven-snapshots/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 	</repositories>    
 	<distributionManagement>
 		<repository>
-			<id>releases</id>
-			<url>http://v35731.1blu.de:8081/nexus/content/repositories/releases</url>
+			<id>maven-new-server-releases</id>
+<!-- 			<url>http://v35731.1blu.de:8081/nexus/content/repositories/releases</url> -->
+			<url>https://dev.digitale-kuratierung.de/nexus/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
-			<id>snapshots</id>
-			<url>http://v35731.1blu.de:8081/nexus/content/repositories/snapshots</url>
+			<id>maven-new-server</id>
+<!--			<url>http://v35731.1blu.de:8081/nexus/content/repositories/snapshots</url> -->
+			<url>https://dev.digitale-kuratierung.de/nexus/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
         <scm>
